# TokenMisplacedAlgorithm

./: .gitignore  CMakeLists.txt  main.cpp
model/: Message.h  MessageType.h
service/: TokenCommunication.cpp  TokenCommunication.h
util/: Logger.cpp  Logger.h
